db/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: python-shop
spec:
  selector:
    name: db-set
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
